--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "validator": "^13.6.0"
   }
