--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "homepage": "https://github.com/CharlieFoodShop/backend_app#readme",
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
     "bcrypt": "^5.0.1",
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
+    "stream-wormhole": "^1.1.0",
     "validator": "^13.6.0"
   }
 }
