--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
+    "request": "^2.88.2",
     "stream-wormhole": "^1.1.0",
     "validator": "^13.6.0"
   }
