--- a/config.js.example
+++ b/config.js.example
@@ -13,10 +13,29 @@ module.exports = {
         pass: 'tqdtjqwiwdcvxmof'
         // pass: 'XAZ82EeMgTGq88ZAxd'
     },
-    url: {
-        base_url: 'http://144.34.175.242/',
-        api_url: 'http://144.34.175.242/api',
-        manager_reset_password_url: 'http://144.34.175.242/manager/reset-password/'
+    captcha_secretkey: "6LcaKtIZAAAAAMle0f8kTa0hj2Auf9R9pqzOxaF6",
+
+    // Paypal API client secret hash
+    paypal: {
+        paypal_algorithm: 'aes-256-ctr',
+        paypal_secretKey: 'vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3',
+        paypal_iv: 'ebb7e884fbad465ef54dd2611782e34d'
     },
+
+
+    url: {
+        base_url: 'http://144.34.175.242',
+        api_url: 'http://144.34.175.242/api',
+        manager_reset_password_url: 'http://144.34.175.242/manager/reset-password/',
+        customer_reset_password_url: 'http://144.34.175.242/customer/reset-password/'
+    },
+    /*
+    url: {
+        base_url: 'http://localhost:3000',
+        api_url: 'http://localhost:7000',
+        manager_reset_password_url: 'http://localhost:3000/manager/reset-password/',
+        customer_reset_password_url: 'http://localhost:3000/customer/reset-password/'
+    },
+    */
     default_port: 7000
 };
