--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CharlieFoodShop/backend_app#readme",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "await-stream-ready": "^1.0.1",
     "bcrypt": "^5.0.1",
     "busboy": "^0.3.1",
